# BUPT_APIS

./: README.md  pyproject.toml
src/buptapi/: __init__.py  cas.py  electronic.py  endpoint.py  service.py  ucloud.py
src/buptapis/: __init__.py  academic.py  electric.py  innovation.py
