[project]
name = "buptapi"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ZeroCore", email = "esetting@hotmail.com" }
]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/ZeroCore-Zero/BUPT_API"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
